@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-07-12T08:10:11Z",
-  "count_outdated" : 94,
-  "uniques_outdated" : 52,
-  "count" : 95,
-  "uniques" : 53,
+  "timestamp" : "2023-07-14T16:08:57Z",
+  "count_outdated" : 95,
+  "uniques_outdated" : 53,
+  "count" : 98,
+  "uniques" : 54,
   "views" : [
     {
-      "timestamp": "2023-06-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "timestamp": "2023-07-14T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "count_decinc": [ 0, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
