@@ -1,10 +1,10 @@
 {
-  "count": 1,
+  "count": 3,
   "uniques": 1,
   "views": [
     {
-      "timestamp": "2023-06-30T00:00:00Z",
-      "count": 1,
+      "timestamp": "2023-07-14T00:00:00Z",
+      "count": 3,
       "uniques": 1
     }
   ]
